--- a/RESTInventoryTracker/src/main/resources/static/index.html
+++ b/RESTInventoryTracker/src/main/resources/static/index.html
@@ -2,32 +2,34 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>REST Video Store</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<title>Inventory Management</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/main.css">
-
-<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 
-	<main>	
-	
-	<h1>hello</h1>
-	
-	<div id="inventoryListDiv"></div>
-	
-	<div id="inventoryDetailDiv"></div>
-	
-	<div id="addInventoryDiv"></div>
-	
-	<div id="editInventoryDiv"></div>
-	
-	</main>
-	
-	
-	
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-crossorigin="anonymous"></script>
+<main>
+    <h1>Inventory List</h1>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Item Name</th>
+                </tr>
+            </thead>
+            <tbody id="inventoryTableBody">
+                <!-- Inventory items will be dynamically populated here -->
+            </tbody>
+        </table>
+    </div>
+    
+    <div id="itemDetailsDiv" class="mt-4">
+        <!-- Full details of the clicked item will be displayed here -->
+    </div>
+</main>
+
+<script type="text/javascript" src="js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
