--- a/RESTInventoryTracker/src/main/resources/static/index.html
+++ b/RESTInventoryTracker/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
 <title>Inventory Management</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/main.css">
+<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 
@@ -20,16 +21,16 @@
             </thead>
             <tbody id="inventoryTableBody">
                 <!-- Inventory items will be dynamically populated here -->
+           
             </tbody>
         </table>
     </div>
     
-    <div id="itemDetailsDiv" class="mt-4">
+    <div id="itemDetailsDiv">
         <!-- Full details of the clicked item will be displayed here -->
     </div>
 </main>
 
-<script type="text/javascript" src="js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
