--- a/RESTInventoryTracker/src/main/resources/static/index.html
+++ b/RESTInventoryTracker/src/main/resources/static/index.html
@@ -3,34 +3,49 @@
 <head>
 <meta charset="UTF-8">
 <title>Inventory Management</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet">
 <link rel="stylesheet" href="css/main.css">
 <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 
-<main>
-    <h1>Inventory List</h1>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Item Name</th>
-                </tr>
-            </thead>
-            <tbody id="inventoryTableBody">
-                <!-- Inventory items will be dynamically populated here -->
-           
-            </tbody>
-        </table>
-    </div>
-    
-    <div id="itemDetailsDiv">
-        <!-- Full details of the clicked item will be displayed here -->
-    </div>
-</main>
+	<main>
+		<h1>Inventory List</h1>
+		<div class="table-responsive">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Item Name</th>
+					</tr>
+				</thead>
+				<tbody id="inventoryTableBody">
+					<!-- Inventory items will be dynamically populated here -->
+			
+				</tbody>
+			</table>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+			<form id="addItemForm">
+    <input type="text" id="itemNameInput" name="itemName" placeholder="Item Name" required>
+    <input type="number" id="quantityInput" name="quantity" placeholder="Quantity" required>
+    <input type="number" id="unitPriceInput" name="unitPrice" placeholder="Unit Price" required>
+    <input type="text" id="categoryInput" name="category" placeholder="Category" required>
+    <input type="text" id="locationInput" name="location" placeholder="Location" required>
+    <button type="submit" class="btn btn-primary">Add Item</button>
+</form>
+			<br>
+		</div>
+		<br>
+		<div id="itemDetailsDiv">
+			<!-- Full details of the clicked item will be displayed here -->
+		</div>
+	</main>
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 </body>
 </html>
