updates and fixes to update function and add function

--- a/RESTInventoryTracker/src/main/resources/static/index.html
+++ b/RESTInventoryTracker/src/main/resources/static/index.html
@@ -28,11 +28,11 @@
 			</table>
 
 			<form id="addItemForm">
-    <input type="text" id="itemNameInput" name="itemName" placeholder="Item Name" required>
-    <input type="number" id="quantityInput" name="quantity" placeholder="Quantity" required>
-    <input type="number" id="unitPriceInput" name="unitPrice" placeholder="Unit Price" required>
-    <input type="text" id="categoryInput" name="category" placeholder="Category" required>
-    <input type="text" id="locationInput" name="location" placeholder="Location" required>
+    <input type="text" id="itemName" name="itemName" placeholder="Item Name" required>
+    <input type="number" id="quantity" name="quantity" placeholder="Quantity" required>
+    <input type="number" id="unitPrice" name="unitPrice" placeholder="Unit Price" required>
+    <input type="text" id="category" name="category" placeholder="Category" required>
+    <input type="text" id="location" name="location" placeholder="Location" required>
     <button type="submit" class="btn btn-primary">Add Item</button>
 </form>
 			<br>
