--- a/RESTInventoryTracker/src/main/resources/static/index.html
+++ b/RESTInventoryTracker/src/main/resources/static/index.html
@@ -26,11 +26,14 @@
 			
 				</tbody>
 			</table>
+			<div id="totalValueDiv">
+			<!-- Total price of items will be dynamically populated here including the quantity in calculations -->
+			</div>
 
 			<form id="addItemForm">
     <input type="text" id="itemName" name="itemName" placeholder="Item Name" required>
     <input type="number" id="quantity" name="quantity" placeholder="Quantity" required>
-    <input type="number" id="unitPrice" name="unitPrice" placeholder="Unit Price" required>
+    <input type="number" id="unitPrice" name="unitPrice" placeholder="Unit Price" step="0.01" required>
     <input type="text" id="category" name="category" placeholder="Category" required>
     <input type="text" id="location" name="location" placeholder="Location" required>
     <button type="submit" class="btn btn-primary">Add Item</button>
@@ -41,6 +44,7 @@
 		<div id="itemDetailsDiv">
 			<!-- Full details of the clicked item will be displayed here -->
 		</div>
+		
 	</main>
 
 	<script
